--- a/Configurations/References.sty
+++ b/Configurations/References.sty
@@ -1,4 +1,4 @@
-%% Bibliography %%
+%% Bibliography
 \usepackage[
 	backend=biber, % Use Biber for bibliography compilation.
 	citestyle=authoryear, % Style for in-text citations.
