--- a/Main.tex
+++ b/Main.tex
@@ -1,4 +1,3 @@
-
 %% Document Options 
 \documentclass[
     docstage=working,
@@ -24,7 +23,7 @@
 \author{\GetFirstAuthor}
 \subject{\GetDegree} % Cover only
 \affiliation{\GetUniversity } % Cover only
-\coverimage{Figures/covers/cover4.jpg} % Aspect ratio of 2:3 (portrait) recommended
+\coverimage{Figures/covers/cover4.jpg} % Aspect ratio of 2:3 (portrait)
 \definecolor{title}{HTML}{4884d6} % Color for cover title
 
 \makecover
