--- a/Main.tex
+++ b/Main.tex
@@ -59,7 +59,12 @@
 
 %% Bibliography
 \renewcommand{\refname}{Bibliography}
+\markright{}
 \printbibliography[title={\refname},heading=bibintoc]
+
+
+
+
 
 %% Appendices: Work that *YOU* Developed
 \appendix
