--- a/Configurations/Colors.sty
+++ b/Configurations/Colors.sty
@@ -4,7 +4,8 @@
 % Color used in the links
 \definecolor{maincolor}{HTML}{145DA0}
 \definecolor{section}{HTML}{0d47a1}
-\definecolor{reflinkcolor}{HTML}{1565c0}
+\definecolor{subseccolor}{HTML}{1565c0}
+\definecolor{reflinkcolor}{HTML}{709bf8}
 
 
 % Color used in the numeration of the chapter style 'classic'.
@@ -24,5 +25,5 @@
 %% Table of Contents Color
 \renewcommand{\cftchapfont}{\hypersetup{linkcolor=black}}
 \renewcommand{\cftsecfont}{\hypersetup{linkcolor=section}}
-\renewcommand{\cftsubsecfont}{\hypersetup{linkcolor=reflinkcolor}}
+\renewcommand{\cftsubsecfont}{\hypersetup{linkcolor=subseccolor}}
 
