--- a/Configurations/References.sty
+++ b/Configurations/References.sty
@@ -55,8 +55,8 @@
 \hypersetup{
     bookmarksnumbered, % Enables the chapter and section numbers within the PDF bookmarks.
 	colorlinks=true, % Enable colored text for links.
-	urlcolor=maincolor, % Color for \url and \href links.
-	linkcolor=maincolor, % Color for internal links (e.g., \nameref).
+	urlcolor=reflinkcolor, % Color for \url and \href links.
+	linkcolor=subseccolor, % Color for internal links (e.g., \nameref).
 	citecolor=maincolor, % Color for citation links.
 }
 
@@ -69,7 +69,6 @@
 
 
 % Continuous vertical line with numeric labels on the left
-\usepackage{tikz}
 \usepackage{eso-pic}
 \usetikzlibrary{calc}
 
