--- a/Main.tex
+++ b/Main.tex
@@ -60,11 +60,7 @@
 %% Bibliography
 \renewcommand{\refname}{Bibliography}
 \markright{}
-\printbibliography[title={\refname},heading=bibintoc]
-
-
-
-
+\printbibliography[title={\refname},heading=custombib]
 
 %% Appendices: Work that *YOU* Developed
 \appendix
