Custom Bib Added

--- a/Main.tex
+++ b/Main.tex
@@ -60,7 +60,8 @@
 %% Bibliography
 \renewcommand{\refname}{Bibliography}
 \markright{}
-\printbibliography[title={\refname},heading=custombib]
+\printbibliography[title={\refname}, heading=bibintoc]
+% \printbibliography[title={\refname},heading=custombib,env=custombibenv]  %% For World Economic Forum Style Referencing
 
 %% Appendices: Work that *YOU* Developed
 \appendix
