--- a/Configurations/References.sty
+++ b/Configurations/References.sty
@@ -13,19 +13,19 @@
 \addbibresource{Bibliography/Bibliography.bib} % Load the bibliography file.
 
 
-\DeclareFieldFormat{labelnumber}{#1}
+\DeclareFieldFormat{labelnumber}{#1.}
 \DeclareFieldFormat{labelnumberwidth}{#1}
 
 
 %Custom Bibiligraphy title
 \defbibheading{custombib}[\refname]{%
-  \chapter*{}% start a new chapter page, but no automatic title
-  \addcontentsline{toc}{chapter}{#1}% add Bibliography to ToC
-  \markboth{#1}{#1}%
-  \vspace*{-5.9cm} % adjust vertical placement after empty chapter
-  \hspace*{1.35cm}%
-  {\crimsonfont\fontsize{26.8}{30}\selectfont \textbf{#1}}%
-  \vspace{1cm} % <-- space between title and bibliography entries
+    \chapter*{}% start a new chapter page, but no automatic title
+    \addcontentsline{toc}{chapter}{#1}% add Bibliography to ToC
+    \markboth{#1}{#1}%
+    \vspace*{-5.9cm} % adjust vertical placement after empty chapter
+    \hspace*{1.35cm}%
+    {\crimsonfont\fontsize{26.8}{30}\selectfont \textbf{#1}}%
+    \vspace{1cm} % <-- space between title and bibliography entries
 }
 
 
@@ -39,12 +39,12 @@
 \newlength{\bibleftmargin}   
 \setlength{\bibleftmargin}{1.4cm} % where bibliography text starts
 
-\defbibenvironment{bibliography}
+\defbibenvironment{custombibenv}
   {%
     \list
       {\printtext[labelnumberwidth]{\printfield{labelnumber}\adddot}}
       {%
-        \setlength{\labelwidth}{1.5cm}% width reserved for numbers
+        % \setlength{\labelwidth}{0.5cm}% width reserved for numbers
         \setlength{\labelsep}{0.8cm}% space between number and line
         \setlength{\leftmargin}{\bibleftmargin}% text starts here
         \setlength{\itemindent}{0pt}%
