Title Page Changes

--- a/Main.tex
+++ b/Main.tex
@@ -29,7 +29,7 @@
 \makecover
 
 \input{Metadata/title-report}
-\include{Metadata/wbs-tilte}
+% \include{Metadata/wbs-tilte}
 \include{Matter/Copyright}
 \IntentionalBlankPage   %% Intentional Blank Page
 
@@ -61,7 +61,7 @@
 \renewcommand{\refname}{Bibliography}
 \markright{}
 \printbibliography[title={\refname}, heading=bibintoc]
-% \printbibliography[title={\refname},heading=custombib,env=custombibenv]  %% For World Economic Forum Style Referencing
+% \printbibliography[title={\refname},heading=custombib,env=custombibenv]  % For World Economic Forum Style Referencing
 
 %% Appendices: Work that *YOU* Developed
 \appendix
