Title Page changes

--- a/Metadata/Metadata.tex
+++ b/Metadata/Metadata.tex
@@ -34,7 +34,7 @@
 \Department{Department of Mathematics and Economics}
 
 % Degree (Mandatory)
-\Degree{M.Sc Mathematical Finance}
+\Degree{Master of Science in Mathematical Finance}
 
 % Course (Optional)
 % \Course{Course Name}
